Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- VW e-Up: CCS (DC) charge detection & data
  New metrics:
    xvu.c.ccs.u             -- CCS charger supplied voltage [V]
    xvu.c.ccs.i             -- CCS Charger supplied current [A]
    xvu.c.ccs.p             -- CCS Charger supplied power [kW]
- VW e-Up: replaced MFD range based CAC/SOH by charge coulomb count based
  Removed metrics:
    xvu.b.cap.range
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.kwh.norm
    xvu.b.cap.chg.kwh.abs
  New metrics:
    xvu.b.energy.range      -- MFD range estimation energy [kWh]
    xvu.b.cap.kwh.range     -- … usable battery capacity derived [kWh]
    xvu.b.cap.ah.abs        -- Charge coulomb based capacity [Ah]
    xvu.b.cap.ah.norm       -- … normalized (usable) [Ah]
    xvu.b.cap.kwh.abs       -- Charge energy based capacity [kWh]
    xvu.b.cap.kwh.norm      -- … normalized (usable) [kWh]
- Volt/Ampera: new xva metrics:
    xva.v.p.trip.ev   = trip using electric, km;
    xva.v.e.fuel      = fuel tank level, %; 
- WiFi: replace fixed scan times by config instances
  New configs:
    [network] wifi.scan.tmin              Min scan time per channel [ms], default 120 ms
    [network] wifi.scan.tmax              Max scan time per channel [ms], default 120 ms
- ZOE: BMS cell monitoring (PH1)
- SmartED: add Drivmode for Brabus
- BMS: optional cell voltage & temperature logging
  New configs:
    [vehicle] bms.log.voltage.interval    Interval [s] for cell voltage logging, default 0=disable
    [vehicle] bms.log.temp.interval       Interval [s] for cell temperature logging, default 0=disable
- BMS: detection of inconsistent voltage series by gradient & stddev average deviation
    thresholds, added pack metrics to battery monitor web UI, change cell warning & alert
    thresholds to be applied exceeding stddev level
  New metrics:
    v.b.p.voltage.grad                    Cell voltage - gradient of current series [V]