@@ -1,0 +1,34 @@
+=======================
+Maxus eDeliver3
+=======================
+
+Vehicle Type: **MED3**
+
+The Maxus eDeliver3 will be documented here.
+
+----------------
+Support Overview
+----------------
+
+=========================== ==============
+Function                    Support Status
+=========================== ==============
+Hardware                    OVMS v3 (or later)
+Vehicle Cable               OBD-II to DB9 Data Cable for OVMS (1441200 right, or 1139300 left)
+GSM Antenna                 1000500 Open Vehicles OVMS GSM Antenna (or any compatible antenna)
+GPS Antenna                 1020200 Universal GPS Antenna (SMA Connector) (or any compatible antenna)
+SOC Display                 Yes
+Range Display               Yes
+GPS Location                Yes (from modem module GPS)
+Speed Display               No
+Temperature Display         Yes (External Temp and Battery)
+BMS v+t Display             No
+TPMS Display                No
+Charge Status Display       No
+Charge Interruption Alerts  No
+Charge Control              No
+Cabin Pre-heat/cool Control No
+Lock/Unlock Vehicle         No
+Valet Mode Control          No
+Others
+=========================== ==============
