@@ -301,7 +301,7 @@ config OVMS_VEHICLE_RENAULTZOE
     help
         Enable to include support for Renault Zoe vehicles.
 
-config OVMS_VEHICLE_EDELIVER3
+config OVMS_VEHICLE_MAXED3
     bool "Include support for Maxus eDeliver3 vehicle"
     default y
     depends on OVMS
